nuxt-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: items-app
spec:
  selector:
    app: items-frontend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
